# MediaFile

./: LICENSE.txt  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
.github/: ci-gradle.properties  dependabot.yml
gradle/: libs.versions.toml
media-file/: CMakeLists.txt  build.gradle  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
media-file/src/main/cpp/: CMakeLists.txt  LogCat.h  Main.cpp  MediaFileBuilder.cpp  MediaFileBuilder.h  MediaFileBuilder.hpp  MediaFileContext.cpp  MediaFileContext.h  MediaFileContext.hpp  MediaFileContext_jni.cpp  MediaFileFactory_jni.cpp  MediaFileFrameLoader.cpp  MediaFileFrameLoader.h  MediaFileFrameLoader.hpp  MediaFileFrameLoader_jni.cpp  MediaFileUtility.cpp  MediaFileUtility.h  MediaFileUtility.hpp  MediaSource_jni.cpp  Reinterpret.h  Reinterpret.hpp  Request_jni.cpp  frame_extractor.cpp  frame_extractor.h  frame_loader_context.cpp  frame_loader_context.h  frame_loader_context_jni.cpp  log.h  main.cpp  media_file_builder.cpp  media_file_builder.h  media_file_builder_jni.cpp  utils.cpp  utils.h
media-file/src/main/cpp/MediaFile/: Builder.cpp  Builder.hpp  Context.cpp  Context.hpp  FrameLoader.cpp  FrameLoader.hpp  Logger.cpp  Logger.hpp  MediaFile.cpp  MediaFile.hpp  MediaFileUtility.cpp  MediaFileUtility.hpp
media-file/src/main/cpp/jni/: FrameLoader_jni.cpp  Logger_jni.cpp  MediaFileContext_jni.cpp  MediaFileFactory_jni.cpp  MediaFileFrameLoader_jni.cpp  MediaFile_jni.cpp  MediaSource_jni.cpp  Reinterpret.hpp
media-file/src/main/cpp/log/: ffmpeg.cpp  ffmpeg.h  log.h
scripts/: publish-module.gradle  publish-root.gradle  read-arguments.gradle
(+74 files in other folders)
